--- a/src/index.scss
+++ b/src/index.scss
@@ -33,7 +33,7 @@
   align-items: center;
 }
 
-.result-list {
+.result-list, .results-tabs-nav {
   max-width: 100%;
   padding-top: 1em;
 }
@@ -78,10 +78,6 @@
   }
 }
 
-.new-event {
-  margin-top: 1em;
-}
-
 .right-align {
   text-align: right;
 }
@@ -90,6 +86,37 @@
   padding: 0 !important;
 }
 
+.event-buttons {
+  width: auto;
+  padding: 1rem;
+
+  button {
+    margin-right: 1rem; 
+  }
+}
+
 .sound-event {
   margin-top: 1em;
+  position: relative;
+
+  &:hover {
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    cursor: pointer;
+  }
+
+  .sound-event-card {
+    .sound-event-visuals {
+      padding-top: .5em;
+
+      button, .ReactGridGallery {
+        width: auto;
+      }
+    }
+
+    .dismiss-sound-btn {
+      position: absolute;
+      top: .25rem;
+      right: .25rem;
+    }
+  }
 }
