--- a/src/index.scss
+++ b/src/index.scss
@@ -153,6 +153,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
+    pointer-events: none;
 
     .descriptions, .visuals {
       position: absolute;
@@ -179,6 +180,10 @@
         height: 100%;
         background-size: cover;
         background-repeat: no-repeat;
+      }
+
+      div {
+        pointer-events: auto;
       }
 
     }
